--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,104 +1,90 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
+
+@font-face {
+    font-family: Droid Sans Mono;
+    font-weight: 400;
+    font-style: normal;
+    src: url(../fonts/DroidSansMono.ttf) format('truetype')
+}
+
 body {
-    margin: 20px auto;
-    max-width: 650px;
-    line-height: 1.4;
-    font-size: 1em;
+    margin: 30px;
+    max-width: 630px;
+    line-height: 1.5;
+    font-size: .8em;
     color: #444;
     padding: 0 5px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: SF Mono, Droid Sans Mono, courier, monospace;
 }
 
 h1,
 h2,
 h3 {
-    line-height: 1.2;
+    line-height: 1.1
 }
-
-div.header h1 {
-    padding-top: 0;
-    margin-bottom: 3em;
-    font-size: 18px;
-    font-weight: 400;
-
-}
-
-#contain {
-	width: auto;
-	display: inline;
-}
-
-.header-menu {
-    float: right;
-    color: #999999;
-    font-size: .8em;
-    font-weight:700;
-}
-
-.site-title {
-    background-color: #333333;
-}
-
-.site-title a:link, 
-	    a:visited,
-	    a:hover,
-	    a:active {
-    color: #fff;
-}
-
 
 a:link,
 a:visited,
-a:hover,
 a:active {
-   color: #1535e5;;
-   text-decoration: none;
+    color: #1535e5;
+    text-decoration: none
 }
 
-ul.pagination {
-    list-style-type: none;
-    text-align: center;
-    padding: 0;
+a:hover {
+    color: #1535e5;
+    text-decoration: underline
 }
 
-
-ul.pagination > li {
-    padding: 8px 8px;
-    display: inline-block;
-}
-
-div.footer {
-    text-align: center;
-    padding-top: 5em;
-}
 
 img {
     max-width: 100%;
     max-height: 100%;
     display: block;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto
 }
 
 article.post {
-    font-size: .9em;
+    font-family: Fira Sans;
+    margin-left: 20px;
+    font-size: 1.1em
 }
 
 code {
-    /* font-family: "IBM Plex Mono"; */
-    font-family: SF Mono, Menlo, Monaco, Consolas, monospace;
-    font-size: .9em;
+    font-family: SF Mono, Droid Sans Mono, courier, monospace;
     color: #e51578;
-    background: #fafafa;
+    background: #fafafa
 }
 
 pre {
+    font-family: SF Mono, Droid Sans Mono, courier, monospace;
     padding: 1em;
-    background: #fafafa;
-      overflow-x: scroll;
-        overflow-y: hidden;
+    background: #fafafa
+}
+
+.abt {
+    padding: 1em;
+    border: 2px solid #000
+}
+
+#container {
+    text-align: left;
+    padding-top: 1em;
+    padding-bottom: 1em
+}
+
+#container div {
+    font-weight: 700;
+    width: 23%;
+    display: inline-block;
+    text-align: center;
+    border: 1px solid #000;
+    padding-top: .3em;
+    padding-bottom: .3em
 }
 
 .recents {
-    line-height:.9em;
-	font-size:.9em;
+    font-size: .9em;
+    line-height: 1em;
+    padding-bottom: 2em;
 }
