final touches mf

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,9 @@ img {
     margin-right: auto
 }
 
+.footer {
+    text-align: right;
+}
 article.post {
     font-family: Fira Sans;
     margin-left: 20px;
