--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,7 @@
 {{ block "footer" . }}
 <div class="footer">
+    {{ if ne (relURL .URL) ("/" | safeHTML) }}
+    <a href="/">home</a>
+    {{ end }}
 </div>
 {{ end }}
